# django-management-auth

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/management_auth/: __init__.py  tokens.py  urls.py  views.py
src/management_auth/management/commands/: login_as.py
tests/: settings.py  tests.py  urls.py
