[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django-management-auth"
description = "Login to a Django application from a management command"
authors = [{name = "Jake Howard"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "Django>=3.0,<5.0",
]

[tool.flit.module]
name = "management_auth"

[project.optional-dependencies]
test = [
    "time_machine"
]
lint = [
    "ruff==0.0.291",
    "black==23.9.1",
]

[tool.ruff]
select = ["E", "F", "I", "W", "N", "B", "A", "C4", "T20", "DJ"]
ignore = ["E501"]
